# ingest4x

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  ingest4x.example.toml  ingest4x.file.toml  ingest4x.kafka.toml  ingest4x.mysql.toml  ingest4x.toml
benches/: file.lua  ingest.lua  rules.rs  urls.txt
docs/: _config.yml  admin-api.md  index.md  ingest-protocol.md  ingest4x-release.md  jlt-format.md  load-test-local-blackhole.md  project-structure.md  recommended-workflow.md  release-versioning.md  rules-fields.md  sink-parameters.md  versioning.md  wal-reliable-write-v0.1.md  wal.md
docs/event-processing/: README.md  event-transformation.md  event-validation.md  index.md
docs/features/: ingest.md
docs/zh-CN/: admin-api.md  index.md  ingest-protocol.md  load-test-local-blackhole.md  project-structure.md  release-versioning.md  sink-parameters.md  wal.md
e2e/load/: README.md  README.zh-CN.md  ingest4x.load.toml  run.sh
pipeline/: custom.rhai  main.rhai
scripts/: bump_version.sh  install_hooks.sh  release.sh
scripts/hooks/: pre-commit  pre-push
src/: errors.rs  event.rs  lib.rs  logging.rs  main.rs  routes.rs  server.rs  settings.rs  wal.rs  wal_replay.rs
tests/: admin.rs  cli.rs  db.rs  ingest.rs  ip_test.rs  logging.rs  mock_services.rs  rules.rs  server.rs  settings.rs  test_admin_projects_endpoint.rs  test_admin_rules_endpoint.rs  test_bump_version_script.sh  test_index_endpoint.rs  test_ingest4x_bin.rs  test_ingest_get_endpoint.rs  test_ingest_mock_mode.rs  test_ingest_normalization.rs  test_ingest_post_endpoint.rs  test_ingest_rules_compat.rs  test_ingest_rules_definitions.rs  test_ingest_rules_replacement.rs  test_jlt_runner.rs  test_logging_init.rs  test_project_registry.rs  test_project_repository.rs  test_release_script.sh  test_rule_repository.rs  test_rule_sets_feature_scope.rs  test_rules_loader.rs  test_server_port_wiring.rs  test_settings_database.rs  test_settings_rules.rs  test_wal_replay.rs  test_wal_write.rs  wal.rs
(+213 files in other folders)
